fixed findbugs errors: avoid using new Integer; use Integer.valueOf instead